--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 html {
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 body {
@@ -38,7 +39,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: rgba(247, 246, 255, 0.57);
+  background-color: rgba(247, 246, 255, 0.57);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(158, 195, 224, 0.2);
   backdrop-filter: blur(7.4px);
@@ -56,4 +57,63 @@ body {
   transform: scale(0.95);
 }
 
-/**/
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation: rotate 4s linear infinite;
+}
+
+.fade-in-from-bottom {
+  animation: fadeInFromBottom 1s ease forwards;
+}
+
+@keyframes fadeInFromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(18px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+/*Media query for Navbar*/
+
+@media (max-width: 426px) {
+  .navbar {
+    width: 100%;
+    padding: 0px 32px;
+    background-color: rgba(247, 246, 255, 0.85);
+    border-radius: 16px 16px 0px 0px;
+    bottom: 0;
+    margin: 0;
+  }
+}
+
+/*Scrollbar*/
+
+::-webkit-scrollbar {
+  height: 0px;
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ededed;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(143, 143, 143);
+  border-radius: 24px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
