--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,13 @@ a {
   transform: scale(0.95);
 }
 
+.absolute-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
