--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ a {
 .layout {
   /* background: url("https://image-aws-us-west-2.vsco.co/6b3a87/237518352/624a231b5637f65a7d000001/vsco624a23282e5e8.jpg"); */
   background: linear-gradient(
-      rgba(255, 255, 255, 0.92),
-      rgba(255, 255, 255, 0.92)
+      rgba(255, 255, 255, 0.95),
+      rgba(255, 255, 255, 0.95)
     ),
     url("https://image-aws-us-west-2.vsco.co/6b3a87/237518352/624a231b5637f65a7d000001/vsco624a23282e5e8.jpg");
   background-position: center;
@@ -34,22 +34,23 @@ a {
 
 .navbar {
   position: fixed;
-  bottom: 6%;
+  bottom: 3%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 54px;
   width: 320px;
   border-radius: 99px;
-  padding: 0px 16px;
+  padding: 0px 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(247, 246, 255, 0.57);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(158, 195, 224, 0.2);
-  backdrop-filter: blur(7.4px);
-  -webkit-backdrop-filter: blur(7.4px);
-  border: 2px solid rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 16px;
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .navbar-icon {
@@ -119,7 +120,7 @@ a {
 
 /*Media query for Navbar*/
 
-@media (max-width: 426px) {
+@media (max-width: 500px) {
   .navbar {
     width: 100%;
     padding: 0 32px;
