--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,8 @@ a {
   border-radius: 99%;
 }
 
-.navbar-icon:hover {
-  transform: scale(0.95);
+.navbar-item:hover {
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 1);
 }
 
 .absolute-center {
